<resources>
    <string name="app_name" translatable="false">Frizzl</string>
    <string name="code_start" translatable="false">
        package com.frizzl.frizzlproject3;

import android.content.ActivityNotFoundException;
import android.content.ComponentName;
import android.content.Context;
import android.content.Intent;
import android.os.Build;
import android.os.Bundle;
import android.speech.tts.TextToSpeech;
import android.support.v4.content.ContextCompat;
import android.support.v4.content.res.ResourcesCompat;
import android.support.v7.app.AppCompatActivity;
import android.util.Log;
import android.view.Gravity;
import android.view.View;
import android.widget.LinearLayout;
import android.widget.Toast;
import com.tooltip.Tooltip;
import java.util.Locale;

public class MainActivity extends AppCompatActivity implements   TextToSpeech.OnInitListener{
    LinearLayout backToFrizzlLayout;
    TextToSpeech tts;
    @Override protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_main);
        final Context context = getApplicationContext();

        backToFrizzlLayout = findViewById(R.id.backToFrizzlButton);
        presentTooltip(context);
        backToFrizzlLayout.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view){
                Intent intent = new Intent(Intent.ACTION_MAIN, null);
                intent.addCategory(Intent.CATEGORY_LAUNCHER);
                final ComponentName cn = new ComponentName(\"com.frizzl.app.frizzleapp\",
                        \"com.frizzl.app.frizzleapp.appBuilder.AppBuilderActivity\");
                intent.setComponent(cn);
                intent.putExtra(\"appLevelID\", 2);
                intent.putExtra(\"returnedFromUsersApp\", true);
                intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
                try
                {
                    startActivity(intent);
                }catch(ActivityNotFoundException e){
                    Toast.makeText(context,\"There was an error returning to Frizzl\",Toast.LENGTH_SHORT).show();
                }
            }
        });
        tts = new TextToSpeech(this, this, \"com.google.android.tts\");
        }
    </string>
    <string name="code_end" translatable="false">

     \@SuppressWarnings(\"deprecation\")
     private void speakOut(String textToSay) {
         if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP) {
             tts.speak(textToSay,TextToSpeech.QUEUE_FLUSH,null,null);
         } else {
             tts.speak(textToSay, TextToSpeech.QUEUE_FLUSH, null);
         }
     }

    private void presentTooltip(Context context) {
        int bgColor = ContextCompat.getColor(context, R.color.lightGrey);
        int textColor = ContextCompat.getColor(context, R.color.darkGrey);
     new Tooltip.Builder(backToFrizzlLayout)
             .setText(\"Here you can\\n go back to Frizzl\")
             .setTextColor(textColor)
             .setTextSize(16f)
             .setTypeface(ResourcesCompat.getFont(context, R.font.calibri_regular))
             .setMargin(4f)
             .setGravity(Gravity.TOP)
             .setBackgroundColor(bgColor)
             .setCornerRadius(15f)
             .setPadding(35f)
             .setDismissOnClick(true)
             .setCancelable(true)
             .show();
 }

    @Override
    public void onDestroy() {
        if (tts != null) {
            tts.stop();
            tts.shutdown();
        }
        super.onDestroy();
    }

    @Override
    public void onInit(int status) {

        if (status == TextToSpeech.SUCCESS) {

            int result = tts.setLanguage(Locale.US);

            if (result == TextToSpeech.LANG_MISSING_DATA
                    || result == TextToSpeech.LANG_NOT_SUPPORTED) {
                Log.e(\"TTS\", \"This Language is not supported\");
            }

        } else {
            Log.e(\"TTS\", \"Initilization Failed!\");
        }

    }
}
    </string>
    <string name="new_button_text">New Button</string>
    <string name="new_text_view_text">New Text</string>
    <string name="code">Code</string>
    <string name="design">Design</string>
    <string name="propertiesTableTitle">Edit Element</string>
    <string name="propertiesTableText">Text</string>
    <string name="propertiesTableFont">Font</string>
    <string name="propertiesTableBgColor">Background</string>
    <string name="propertiesTableTextColor" >Text Color</string>
    <string name="propertiesTableOnClick" translatable="false">OnClick</string>
    <string name="save">save</string>
    <string name="facebook_app_id" translatable="false">178438059643086</string>
    <string name="main_notification_channel_name" translatable="false">notification_channel</string>
    <string name="welcome">welcome</string>
    <string name="app_explanation_text">Congratulations! You completed all the practices and you are now ready to build your first app.</string>
    <string name="start">start</string>
    <string name="wow">WOW!</string>
    <string name="thanks">thanks</string>
    <string name="your_app_name">App Name</string>
    <string name="function_name">Function name</string>
    <string name="choose_image">Choose Image</string>
    <string name="speakout_keyboard" translatable="false">speakOut(\"…\")</string>
    <string name="function_keyboard">Add function</string>
    <string name="error_text">Click the bug catcher icon if you\'re stuck.</string>
    <string name="lets_move_on_from_app">let\'s move on</string>
    <string name="friendship_test_app">Friendship\nTest App</string>
    <string name="variables_practice">Practice 2</string>
    <string name="views_practice">Practice 1</string>
    <string name="confession_booth_app">Confession Booth App</string>
    <string name="confession_booth_app_for_url" translatable="false">Confession Booth App</string>
    <string name="onclick_practice">Practice 3</string>
    <string name="speakout_practice">Practice 2</string>
    <string name="tutorial_app">Tutorial App</string>
    <string name="yay">yay!</string>
    <string name="my_first_app">My First App</string>
    <string name="you_learned_so_much">You learned so much,</string>
    <string name="good_job">Good Job!</string>
    <string name="here_you_can_see_an_example_for_a_two_lines_task">Here you can see an example for a two lines Task.</string>
    <string name="keyboard_english">english</string>
    <string name="keyboard_enter">Enter</string>
    <string name="keyboard_delete">Delete</string>
    <string name="problem_with_code_error">Uh oh, there is some problem with the code</string>
    <string name="problem_with_syntax">Uh oh, there is some problem with the code.</string>
    <string name="button">Button</string>
    <string name="all_tasks_completed">You\'ve completed all your tasks.</string>
    <string name="amazing_work">Amazing work!</string>
    <string name="initial_code" translatable="false" />
    <string name="try_again">Try Again</string>
    <string name="tooltip_add_elements">Here you can  add elements.</string>
    <string name="tooltip_install_app">Here you can install your app.</string>
    <string name="tooltip_see_task">Here you can see  what your task is.</string>
    <string name="tooltip_move_on">Great!  Move on to your next task.</string>
    <string name="send">send</string>
    <string name="feedback_support"><![CDATA[feedback & support]]></string>
    <string name="feedback_hint">We\'d love to hear your thoughts or answer any questions…</string>
    <string name="email_hint">Your E-mail</string>
    <string name="contact_us"><![CDATA[Feel free to contact\nus for feedback & support]]></string>
    <string name="next">next</string>
    <string name="lets_go">next</string>
    <string name="welcome_to_our_beta">welcome\n to our beta</string>
    <string name="practice">practice</string>
    <string name="practice_explanation_text">In this next practice we\'ll learn to use commands.</string>
    <string name="cool">cool</string>
    <string name="onclick_practice_explanation_text">Finally, we will learn how to make a button in our app read text aloud.</string>
    <string name="speakout_practice_explanation_text">We will now learn our first command, that instructs the computer to read text aloud.</string>
    <string name="first_practice">Practice 1</string>
    <string name="first_practice_explanation_text">As a start, we will learn about the two main aspects of building apps.</string>
    <string name="check">Check</string>
    <string name="intro">Intro</string>
    <string name="friendship_intro">Intro</string>
    <string name="onboarding_text">Let\'s start\nbuilding apps.</string>
    <string name="our_button_does_nothing">Our button does nothing yet.</string>
    <string name="guilty_pleasure">What\'s my guilty pleasure?</string>
    <string name="celebrity_crush">Who\'s my celebrity crush?</string>
    <string name="best_friend">Who\'s my best friend?</string>
    <string name="my_button">My Button</string>
    <string name="no_functions">No function was defined yet</string>
    <string name="choose_function">Choose a function</string>
    <string name="turn_volume_up">Turn up the volume to hear</string>
    <string name="task">Task</string>
    <string name="arrow_next">next</string>
    <string name="arrow_prev">prev</string>
    <string name="got_it">Got it</string>
    <string name="error_read_instructions">Read the instructions again.</string>
    <string name="error_add_speakout">Try to add the speakOut command using the keyboard.</string>
    <string name="error_delete_speakout_add_function">Delete the speakOut command and use the \'Add Function\' button on the keyboard.</string>
    <string name="error_dont_change_function">We\'ll now leave the white parts of the code as they were. Use the \'Add Function\' button on the keyboard.</string>
    <string name="error_speakout_brackets">The speakOut command should be written between the curly brackets.</string>
    <string name="error_set_onclick">Try to click the button and fill in the OnClick property.</string>
    <string name="error_speakout_not_this_is_so_cool">Make sure the text between the parentheses is correct.</string>
    <string name="error_function_not_myfunction">Make sure the function is named correctly.</string>
    <string name="error_functions_with_same_name">Each function should have a different name.</string>
    <string name="error_function_inside_function">A new functions should not be written inside an existing one, try to add it after the curly bracket.</string>
    <string name="done">done</string>
    <string name="your_message_successfully_sent">Your message was successfully sent.</string>
    <string name="feedback_thank_you">Thank you!</string>
    <string name="notification_semicolon">Every command must end with a semicolon.</string>
    <string name="notification_space">Commands must be written exactly as presented.</string>
    <string name="install_permission_request">We\'re about to install your app, we just need your permission first</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="downloading_your_app">Downloading your app…</string>
    <string name="downloading_this_is_so_exciting">This is so exciting!</string>
    <string name="well_done">Well Done</string>
    <string name="completed_first_practice">You completed your first practice.</string>
    <string name="try_again_when_connected">Try again when you\'re connected.</string>
    <string name="internet_connection_required">Internet connection is required to install your app.</string>
    <string name="first_course_completed">You completed your first course!</string>
    <string name="fill_in_email">Fill in your e-mail to be notified when our next course is available.</string>
    <string name="notify_me">Notify Me</string>
</resources>