<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/UnselectedLightGrey"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_speakout"
            android:textAppearance="@style/Text.KeyBoardsKeys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_key"
            android:text="@string/speakout_keyboard" />

        <Button
            android:id="@+id/button_function"
            android:textAppearance="@style/Text.KeyBoardsKeys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_key"
            android:text="@string/function_keyboard" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/UnselectedLightGrey"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_english"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:background="@drawable/keyboard_key"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_keyboard"
            android:text="@string/keyboard_english" />

        <ImageButton
            android:id="@+id/button_enter"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:background="@drawable/keyboard_key"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_enter"
            android:text="@string/keyboard_enter" />

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_key"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_backspace"
            android:text="@string/keyboard_delete" />

    </LinearLayout>

</merge>