<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:padding="30dp"
    tools:context="com.frizzl.app.frizzleapp.practice.PracticeActivity">

        <ImageView
            android:id="@+id/trophy"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:src="@drawable/wow_screen_trophy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/congratsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wow"
            android:textAppearance="@style/Text.Title.Torquise"
            app:layout_constraintBottom_toTopOf="@+id/congratsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trophy"
            app:layout_constraintVertical_chainStyle="packed" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/congratsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:text="@string/you_learned_so_much"
            android:textAppearance="@style/Text.Info"
            app:layout_constraintBottom_toTopOf="@+id/amazingWork"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratsTitle" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/amazingWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/good_job"
            android:textAppearance="@style/Text.Info.Bold"
            app:layout_constraintBottom_toTopOf="@+id/thanksButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratsText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/thanksButton"
            style="@style/Button.Lilac"
            android:textAppearance="@style/Text.Title.Light"
            android:textColor="@color/white"
            android:text="@string/thanks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratsText"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
