<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/table_background">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/prePracticeTitle"
        style="@style/Text.Title.Popup"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/table_title_background"
        android:gravity="center"
        android:paddingEnd="@dimen/feedback_support_title_margins"
        android:paddingStart="@dimen/feedback_support_title_margins"
        android:text="@string/practice"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/practiceExplanationText"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/practice_explanation_text"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prePracticeTitle" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/okButton"
        style="@style/Button.LightBlue"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/Text.Title.Light"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practiceExplanationText"
        android:text="@string/cool"/>

</android.support.constraint.ConstraintLayout>

</FrameLayout>