<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/table_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



      <TextView
          android:id="@+id/title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@style/Text.BigTitle.Torquise"
          android:textAlignment="center"
          android:textSize="26sp"
          android:layout_marginTop="36dp"
          app:layout_constraintTop_toTopOf="parent"
          android:text="@string/first_course_completed"
          />

        <ImageView
            android:id="@+id/hat"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:src="@drawable/ic_course_completed"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Info"
            android:textAlignment="center"
            android:text="@string/fill_in_email"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hat"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="60"
            android:padding="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:singleLine="true"
            android:textAppearance="@style/Text.ItalicForm"
            android:textColor="@color/TextGrey"
            android:textSize="18sp"
            
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sendButton"
            style="@style/Button.Turquoise"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="36dp"
            android:text="@string/notify_me"
            android:textAppearance="@style/Text.Title.Light"
            android:textColor="@color/white"
            
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />



       

    </android.support.constraint.ConstraintLayout>

</FrameLayout>