<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/table_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/router"
            android:layout_width="152dp"
            android:layout_height="150dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_router" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/connection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/internet_connection_required"
            android:textAppearance="@style/Text.Info.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/router" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/try_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/try_again_when_connected"
            android:textAppearance="@style/Text.Info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connection" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/got_it"
            style="@style/Button.Turquoise"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/got_it"
            android:textAppearance="@style/Text.Title.Light"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/try_again" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>