<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/polly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:background="@drawable/phone"
        app:layout_constraintDimensionRatio="H,5:8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="35dp">

        <ImageView
            android:id="@+id/pollyImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/img_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button1"
            style="@style/Button.UserCreated"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/glowy_pink"
            android:tag="Binge watching the kardashians"
            android:text="@string/guilty_pleasure"
            android:textAppearance="@style/Text.Basic"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pollyImage" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button2"
            style="@style/Button.UserCreated"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/glowy_pink"
            android:tag="Gal Gadot of course"
            android:text="@string/celebrity_crush"
            android:textAppearance="@style/Text.Basic"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button3"
            style="@style/Button.UserCreated"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/glowy_pink"
            android:tag="It's you!"
            android:text="@string/best_friend"
            android:textAppearance="@style/Text.Basic"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
